add_subdirectory(cloud_db_client)

set(nx_enable_werror ON)
if(withClouds OR withDesktopClient)
    add_subdirectory(librelaying)
    add_subdirectory(libvms_gateway_core)
endif()

if(withClouds)
    add_subdirectory(vms_gateway)
    add_subdirectory(libconnection_mediator)
    add_subdirectory(connection_mediator)
    add_subdirectory(libcloud_db)
    add_subdirectory(cloud_db)
    add_subdirectory(libtraffic_relay)
    add_subdirectory(traffic_relay)
    add_subdirectory(time_server)
    add_subdirectory(cloud_connect_test_util)

    if(withTests)
        add_subdirectory(tests)
    endif()
endif()
