add_subdirectory(appserver2_ut)
add_subdirectory(common_ut)
add_subdirectory(nx_fusion_ut)
add_subdirectory(utils_ut)
if(TARGET nx_media)
    add_subdirectory(nx_media_ut)
endif()
add_subdirectory(nx_network_ut)
add_subdirectory(nx_sdk_ut)

if(withMediaServer)
    add_subdirectory(mediaserver_core_ut)
endif()

if(withClouds)
    set(nx_enable_werror ON)

    if (withCassandraTests)
        add_subdirectory(nx_cassandra_ut)
    endif()
endif()
